added company dashobaord and company employee auth

--- a/templates/login.html
+++ b/templates/login.html
@@ -46,6 +46,10 @@
                         <p><strong>User:</strong> user@vaxtrax.com</p>
                         <p><strong>Password:</strong> user123</p>
                     </div>
+                    <div class="demo-account">
+                        <p><strong>Company:</strong> company@vaxtrax.com</p>
+                        <p><strong>Password:</strong> company123</p>
+                    </div>
                 </div>
             </div>
         </div>
